style.css
/* ... */
section.award label {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
    padding: 2rem;
    border-radius: 1rem;
    cursor: pointer;
}

section.award label:hover p {
    text-decoration: underline;
}

section.award label .text {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    align-items: center;
}

section.award label svg {
    width: 3rem;
    height: 3rem;
    padding: .75rem;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px solid #fff;
    border-radius: 50%;
}

section.award label p  {
    font-size: 1.25rem;
    text-transform: uppercase;
    font-weight: 500;
    text-align: left;
}

section.award label h3,
section.award label p {
    color: var(--text-secondary);
}

footer {
    display: flex;
    flex-direction: column;
}

footer .footer-text {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 3rem 0;
}

footer .footer-text h2 {
    font-size: 4rem;
    font-weight: 500;
    text-transform: capitalize;
    max-width: 48rem;
}

footer .footer-text .address {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    gap: .5rem;
    color: var(--text-secondary);
}

footer nav, footer nav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 1rem;
    align-items: center;
}

footer nav {
    padding: 3rem 0;
    border-top: 1px solid rgba(255,255,255,0.2);
}

footer nav a, footer nav p {
    color: var(--text-secondary);
}

@media screen and (max-width: 768px) { 
    main header nav {
        display: none;
    }

    main .carousel-viewport img {
        width: 100%;
        height: 100%;
        object-position: 20% center;
    }

    main section.hero .preview {
        display: none;
    }

    section.about-us,
    section.work,
    section.expertise,
    section.award,
    footer {
        display: flex;
        flex-direction: column;
    }

    section.expertise .links {
        display: none;
    }

    section.expertise .showcase {
        margin: 0;
    }

    section.expertise figcaption {
        position: relative;
        opacity: 1;
        left: unset;
        bottom: unset;
    }

    section.expertise .showcase {
        height: auto;
    }

    section.expertise .showcase-nav {
        margin:0;
    }

    section.award figure {
        display: none;
    }

    footer .footer-text {
        display: flex;
        flex-direction: column;
        gap: 2rem;
    }

    footer .footer-text .address {
        align-items: flex-start;
    }

    footer nav {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
    }
}

@media screen and (min-width: 769px) and (max-width: 1366px){
    main header nav {
        display: none;
    }

    main .carousel-viewport img {
        width: 100%;
        height: 100%;
        object-position: 20% center;
    }

    main section.hero .preview {
        display: none;
    }

    section.award, section.work, footer {
        display: flex;
        flex-direction: column;
        gap: 2rem;
    }

    section.award figure {
        display: none;
    }

    footer .footer-text {
        display: flex;
        flex-direction: column;
        gap: 2rem;
    }

    footer .footer-text .address {
        align-items: flex-start;
    }
}

